Add info about ignored books

--- a/app/src/tpl/states/load.html
+++ b/app/src/tpl/states/load.html
@@ -31,6 +31,8 @@
           </ol>
           The list of books is stored on your computer, so if you go to another computer you have to run update again.
           <br>
+          List of ignored books are stored on your Google account, so it will be shared between computers.
+          <br>
           It is nevertheless wise to run update every time you open AudibleHero looking for a new book,
           or else AudibleHero will not know about them.
           <h5>Incognito</h5>
