--- a/app/src/tpl/states/load.html
+++ b/app/src/tpl/states/load.html
@@ -1,7 +1,3 @@
-<a href class="btn btn-default" ui-sref="app">
-  <i class="fa fa-home"></i>
-  Back
-</a>
 <div class="panel {{ active === -1 ? 'panel-primary' : 'panel-default'}}">
   <div class="panel-heading">
     <h3 class="panel-title">Start</h3>
@@ -19,30 +15,8 @@
           <h3><i class="fa fa-info"></i> Note:</h3>
           AudibleHero will not make any changes to your Audible, it will only read data from the web site
           and display the results to you.
-          <h4>How it works:</h4>
-          AudibleHero will;
-          <ol>
-            <li>load your library.</li>
-            <li>find all authors you have purchased books from.</li>
-            <li>find all books published by these authors.</li>
-            <li>group books by series.</li>
-            <li>group books by authors.</li>
-            <li>repeat 2.- 5. with incognito mode.</li>
-          </ol>
-          The list of books is stored on your computer, so if you go to another computer you have to run update again.
           <br>
-          List of ignored books are stored on your Google account, so it will be shared between computers.
-          <br>
-          It is nevertheless wise to run update every time you open AudibleHero looking for a new book,
-          or else AudibleHero will not know about them.
-          <h5>Incognito</h5>
-          AudibleHero will run the update twice, once as your user and once as incognito.
-          <br>
-          Reason is that books you can see are regional based. If you do a search in incognito you will see all books.
-          <br>
-          It is possible to buy books cross regionality.
-          <br>
-          In order to determine if a book appeared only when in incognito the update is ran twice.
+          To find out how AudibleHero works, look at the <a ui-sref="about">about-section</a>.
         </div>
       </li>
     </ul>
