Add info about ignored books

--- a/app/src/tpl/states/about.html
+++ b/app/src/tpl/states/about.html
@@ -30,6 +30,20 @@ AudibleHero will;
   In order to determine if a book appeared only when in incognito the update is ran twice.
 </p>
 
+<h3>Ignored books</h3>
+<p>
+  AudibleHero let you ignore books. The meaning of this feature is to "tag" books you don't want to show up on the front
+  page.
+  <br>
+  The reason can be that you don't want to ever read the book, or any of the books on an author.
+  <br>
+  This feature was added because it was hard to filter out what were really new books in series, and which were not.
+  <br>
+  While the list of books is stored on your computer, the list of ignored books are stored on your Google account.
+  <br>
+  So when you run update on another computer the ignored books stays ignored.
+</p>
+
 <h3>FAQ</h3>
 <p>
   <b>Will AudibleHero make changes to my Audible page and/or account?</b>
