--- a/app/src/states/about/about.html
+++ b/app/src/states/about/about.html
@@ -35,13 +35,13 @@ AudibleHero will;
   AudibleHero let you ignore books. The meaning of this feature is to "tag" books you don't want to show up on the front
   page.
   <br>
-  The reason can be that you don't want to ever read the book, or any of the books on an author.
+  The reason can be that you don't want to ever read the book, or any of the books by an author.
   <br>
-  This feature was added because it was hard to filter out what were really new books in series, and which were not.
+  This feature was added because it was hard to see which books were really new books in series, and which were not.
   <br>
   While the list of books is stored on your computer, the list of ignored books are stored on your Google account.
   <br>
-  So when you run update on another computer the ignored books stays ignored.
+  When you run update on another computer the ignored books stays ignored.
 </p>
 
 <h3>FAQ</h3>
