Hard code newbooks as first (default) route-ish

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -6,7 +6,7 @@
       <i class="fa fa-arrow-left">Back to audible</i>
     </a>
 
-    <a ui-sref="app" class="btn btn-default btn-small">
+    <a ui-sref="app.newbooks" class="btn btn-default btn-small">
       <i class="fa fa-home">Home</i>
     </a>
 
