--- a/app/src/states/about/about.html
+++ b/app/src/states/about/about.html
@@ -1,66 +1,102 @@
-<p class="row">
-<h3>How it works:</h3>
-AudibleHero will;
-<ol>
-  <li>load your library.</li>
-  <li>find all authors you have purchased books from.</li>
-  <li>find all books published by these authors.</li>
-  <li>group books by series.</li>
-  <li>group books by authors.</li>
-  <li>repeat 2.- 5. with incognito mode.</li>
-</ol>
-<p>
-  The list of books is stored on your computer, so if you go to another computer you have to run update again.
-  <br>
-  List of ignored books are stored on your Google account, so it will be shared between computers.
-  <br>
-  It is nevertheless wise to run update every time you open AudibleHero looking for a new book,
-  or else AudibleHero will not know about them.
+<div class="row">
+  <h3>How it works:</h3>
+  AudibleHero will;
+  <ol>
+    <li>load your library.</li>
+    <li>find all authors you have purchased books from.</li>
+    <li>find all books published by these authors.</li>
+    <li>group books by series.</li>
+    <li>group books by authors.</li>
+    <li>repeat 2.- 5. with incognito mode.</li>
+  </ol>
+  <p>
+    The list of books is stored on your computer, so if you go to another computer you have to run update again.
+    <br>
+    List of ignored books are stored on your Google account, so it will be shared between computers.
+    <br>
+    It is nevertheless wise to run update every time you open AudibleHero looking for a new book,
+    or else AudibleHero will not know about them.
 
-</p>
+  </p>
 
-<h3>Incognito</h3>
-<p>
-  AudibleHero will run the update twice, once as your user and once as incognito.
-  <br>
-  Reason is that books you can see are regional based. If you do a search in incognito you will see all books.
-  <br>
-  It is possible to buy books cross regionality.
-  <br>
-  In order to determine if a book appeared only when in incognito the update is ran twice.
-</p>
+  <h3>
+    <small><i class="fa fa-user-secret"></i></small>
+    Incognito
+  </h3>
+  <p>
+    AudibleHero will run the update twice, once as your user and once as incognito.
+    <br>
+    Reason is that books you can see are regional based. If you do a search in incognito you will see all books.
+    <br>
+    It is possible to buy books cross regionality.
+    <br>
+    In order to determine if a book appeared only when in incognito the update is ran twice.
+  </p>
 
-<h3>Ignored books</h3>
-<p>
-  AudibleHero let you ignore books. The meaning of this feature is to "tag" books you don't want to show up on the front
-  page.
-  <br>
-  The reason can be that you don't want to ever read the book, or any of the books by an author.
-  <br>
-  This feature was added because it was hard to see which books were really new books in series, and which were not.
-  <br>
-  While the list of books is stored on your computer, the list of ignored books are stored on your Google account.
-  <br>
-  When you run update on another computer the ignored books stays ignored.
-</p>
+  <h3>
+    <small><i class="fa fa-eye-slash"></i></small>
+    Ignored books
+  </h3>
+  <p>
+    AudibleHero let you ignore books. The meaning of this feature is to "tag" books you don't want to show up on the
+    front
+    page.
+    <br>
+    The reason can be that you don't want to ever read the book, or any of the books by an author.
+    <br>
+    This feature was added because it was hard to see which books were really new books in series, and which were not.
+    <br>
+    While the list of books is stored on your computer, the list of ignored books are stored on your Google account.
+    <br>
+    When you run update on another computer the ignored books stays ignored.
+  </p>
 
-<h3>FAQ</h3>
-<p>
-  <b>Will AudibleHero make changes to my Audible page and/or account?</b>
-  <br>
-  No.
-</p>
-<p>
-  <b>How often is the library updated?</b>
-  <br>
-  The library is updated only manually via the <a ui-sref="load">update page</a>.
-</p>
+  <h3>
+    <small><i class="fa fa-question-circle"></i></small>
+    FAQ
+  </h3>
+  <p>
+    <b>Will AudibleHero make changes to my Audible page and/or account?</b>
+    <br>
+    No.
+  </p>
 
-<h3>Feedback and contribution</h3>
-<p>
-  Questions and suggestions can be e-mailed to eirikb@eirikb.no .
-  <br>
-  The project is open source and can be located at <a href="https://github.com/eirikb/audiblehero">https://github.com/eirikb/audiblehero</a>.
-  Contributions are very welcome.
-</p>
+  <p>
+    <b>How often is the library updated?</b>
+    <br>
+    The library is updated only manually via the <a ui-sref="load">update page</a>.
+  </p>
+
+  <p>
+    <b>AudibleHero doesn't find all books in my library.</b>
+    <br>
+    Some books are removed from Audible. It is possible to open them with a direct link, but they will no longer show up
+    in search results.
+  </p>
+
+  <p>
+    <b>AudibleHero support authors with same name?</b>
+    <br>
+    AudibleHero use the author names to find books. Connection to series will work fine, but AudibleHero
+    can't distinguish between two different authors with the same name.
+    <br>
+    As of today there is no distinct between authors on Audible beside their name.
+  </p>
+
+  <h3>
+    <small><i class="fa fa-envelope-o"></i></small>
+    Feedback and
+    <small><i class="fa fa-github"></i></small>
+    contribution
+  </h3>
+  <p>
+    Questions and suggestions can be e-mailed to eirikb@eirikb.no .
+    <br>
+    The project is open source and can be located at
+    <a href="https://github.com/eirikb/audiblehero">
+      <i class="fa fa-github"></i>
+      https://github.com/eirikb/audiblehero
+    </a>.
+    Contributions are very welcome.
+  </p>
 </div>
