Fix typos in about-page

--- a/app/src/states/about/about.html
+++ b/app/src/states/about/about.html
@@ -30,7 +30,7 @@
     <br>
     It is possible to buy books cross regionality.
     <br>
-    In order to determine if a book appeared only when in incognito the update is ran twice.
+    In order to determine if a book appeared only when in incognito the update is run twice.
   </p>
 
   <h3>
@@ -38,7 +38,7 @@
     Ignored books
   </h3>
   <p>
-    AudibleHero let you ignore books. The meaning of this feature is to "tag" books you don't want to show up on the
+    AudibleHero let you ignore books. This feature let you "tag" books you don't want to show up on the
     front
     page.
     <br>
@@ -80,7 +80,7 @@
     AudibleHero use the author names to find books. Connection to series will work fine, but AudibleHero
     can't distinguish between two different authors with the same name.
     <br>
-    As of today there is no distinct between authors on Audible beside their name.
+    As of today there is no distinct identifier between authors on Audible beside their name.
   </p>
 
   <h3>
