Add "by series"- text to new books-tab

--- a/app/src/states/app/app.html
+++ b/app/src/states/app/app.html
@@ -27,7 +27,7 @@
 
 <div class="col-md-12" ng-if="data">
   <ul class="nav nav-tabs">
-    <li ui-sref-active="active"><a ui-sref="app.newbooks">New Books</a></li>
+    <li ui-sref-active="active"><a ui-sref="app.newbooks">New Books<small>(by series)</small></a></li>
     <li ui-sref-active="active"><a ui-sref="app.allbooks">All Books</a></li>
   </ul>
   <ui-view></ui-view>
