--- a/app/src/directives/st-select-boolean/st-select-boolean.html
+++ b/app/src/directives/st-select-boolean/st-select-boolean.html
@@ -1,2 +1,2 @@
-<select class="form-control input-xs" ng-model="selected" ng-change="optionChanged(selected)"
-        ng-options="option as option.value for option in options"></select>
+<select class="form-control input-xs" ng-model="ngModel" ng-change="optionChanged(selected)"
+        ng-options="option.key as option.value for option in options"></select>
