Add multi-ignore capability to table

--- a/app/src/states/all-books/all-books.html
+++ b/app/src/states/all-books/all-books.html
@@ -1,4 +1,5 @@
-<table st-table="displayBooks" st-safe-src="books" st-set-filter="stCustomFilter" class="table table-striped">
+<table filtered-items="filteredBooks" st-table="displayBooks" st-safe-src="books" st-set-filter="stCustomFilter"
+       class="table table-striped">
   <thead>
   <th colspan="2">
     <a class="btn btn-default btn-sm" ng-click="filterByNewBooks()">
@@ -6,8 +7,12 @@
       New books
     </a>
   </th>
-  <th colspan="12">
+  <th colspan="9">
     <input st-search placeholder="global search" class="input-sm form-control" type="search"/>
+  </th>
+  <th colspan="3">
+    <a class="btn btn-default btn-sm" ng-click="ignoreBooks(displayBooks)">Ignore on page</a>
+    <a class="btn btn-default btn-sm" ng-click="ignoreBooks(filteredBooks)">Ignore all</a>
   </th>
   <tr>
     <th></th>
