Use more discrete book count in table

--- a/app/src/states/all-books/all-books.html
+++ b/app/src/states/all-books/all-books.html
@@ -18,8 +18,8 @@
   </tr>
   <tr>
     <th colspan="14">
-      <div ng-if="filteredBooks">
-        Showing a total of <span class="badge">{{filteredBooks.length}}</span> books.
+      <div ng-if="filteredBooks" class="pull-right">
+        Total {{filteredBooks.length}}
       </div>
     </th>
   </tr>
