Add information about why ignored books suddenly are un-ignored

--- a/app/src/states/about/about.html
+++ b/app/src/states/about/about.html
@@ -83,6 +83,20 @@
     As of today there is no distinct identifier between authors on Audible beside their name.
   </p>
 
+  <p>
+    <b>Why are all my ignored books suddenly un-ignored?</b>
+    <br>
+    As of version <b>4</b> (2015-10-27) the saving layout of ignored books had to be remade.
+    <br>
+    Turns out one "item" in Google sync can't exceed a specific sice,
+    so users with a lot of ignored books would get an error. This is now fixed.
+    <br>
+    The fix is
+    <a href="https://github.com/eirikb/AudibleHero/commit/fdf43c80fe75ddb5fe0cedb192ddd93ee94d92d9" target="_blank">
+      visible at the repo
+    </a>.
+  </p>
+
   <h3>
     <small><i class="fa fa-envelope-o"></i></small>
     Feedback and
