Fix typo in about-page

--- a/app/src/states/about/about.html
+++ b/app/src/states/about/about.html
@@ -88,7 +88,7 @@
     <br>
     As of version <b>4</b> (2015-10-27) the saving layout of ignored books had to be remade.
     <br>
-    Turns out one "item" in Google sync can't exceed a specific sice,
+    Turns out one "item" in Google sync can't exceed a specific size,
     so users with a lot of ignored books would get an error. This is now fixed.
     <br>
     The fix is
