--- a/src/states/app/app.html
+++ b/src/states/app/app.html
@@ -1,5 +1,5 @@
 <div class="col-md-3">
-  <img src="{{'img/superhero.png' | absoluteUrl}}">
+  <img ng-src="{{'img/superhero.png' | absoluteUrl}}">
 </div>
 <div class="col-md-9">
   <h1>Welcome to AudibleHero!</h1>
